front end changes complete for editing todo items

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# emacs files
+# emacs files, apple files
 *~
 \#*#
 .#*
+.DS_Store
 
 # project files
 .gradle/
